# graphest

./: .eslintrc.json  .gitignore  .prettierignore  Cargo.toml  Examples.md  LICENSE  README.md  build.rs  electron-builder.config.js  electron-builder.json  eslint.config.js  jest.config.js  package-lock.json  package.json  prettier.config.js  rust-toolchain  rust-toolchain.toml  tsconfig.json  webpack.config.js
.cargo/: config.toml
.github/: dependabot.yml  mergify.yml
.github/workflows/: app.yml  build.yml  codeql.yml  release.yml  rust.yml
docs/: build.md
docs/guide/: README.adoc  index.adoc  index.html
docs/guide/config/: docinfo.html  remove_mathjax.rb
fonts/src/: DejaVuSansMono.sfd
rust/: .gitignore  Cargo.toml  Examples.md  README.md  build.rs
rust/graphest-arb-sys/: Cargo.toml  build.rs
rust/graphest-arb-sys/src/: lib.rs
rust/graphest-fftw-sys/: Cargo.toml  build.rs
rust/graphest-fftw-sys/src/: lib.rs
rust/graphest-flint-sys/: Cargo.toml  build.rs
rust/graphest-webp-sys/: Cargo.toml  build.rs
rust/graphest-webp-sys/src/: lib.rs
rust/src/: arb.rs  arb_interval_set_ops.rs  arb_sys.rs  ast.rs  block.rs  context.rs  definitions.rs  eval_cache.rs  eval_result.rs  fftw.rs  geom.rs  graph.rs  image.rs  image_block_queue.rs  interval_set.rs  interval_set_ops.rs  lib.rs  ops.rs  parametric.rs  parse.rs  rational_ops.rs  real.rs  region.rs  relation.rs  ternary.rs  traits.rs  vars.rs  visit.rs  webp.rs
rust/src/graph/: common.rs  constant.rs  explicit.rs  implicit.rs  parametric.rs
rust/tests/: README.md  graph.rs
rust/tests/graph_tests/: constant.rs  dilate.rs  examples.rs  explicit.rs  functions.rs  implicit.rs  pad.rs  parametric.rs  pen_size.rs  polar.rs  ssaa.rs  thickness.rs
scripts/: afterSign.js
src/: App.css  App.tsx  Bar.tsx  ColorButton.tsx  GraphBar.tsx  GraphBars.tsx  GraphCommandBar.tsx  GraphLayer.ts  GraphView.tsx  GridLayer.ts  MenuItem.ts  README.md  RelationInput.tsx  SymbolsButton.tsx  arb.rs  arb_interval_set_ops.rs  arb_sys.rs  ast.rs  constants.ts  context.rs  dyn_relation.rs  eval_result.rs  graph.rs  index.html  interval_set.rs  interval_set_ops.rs  ipc.ts  main.rs  main.ts  ops.rs  parse.rs  preload.ts  rational_ops.rs  rel.rs  relation.rs  visit.rs
src/@types/: global.d.ts
src/common/: BigNumber.ts  BigNumberForGrid.ts  IBigNumber.ts  bignumber.ts  bignumberForGrid.ts  command.ts  constants.ts  document.ts  exportImage.ts  exportImageOptions.ts  graphTheme.ts  gridRenderer.ts  ibignumber.ts  ipc.ts  parse.ts  preferences.ts  range.ts  rect.ts  result.ts  validationResult.ts
src/main/: backgoundImage.ts  base64Url.ts  encode.ts  execFileWorker.ts  execFileWorkerInterfaces.ts  graphTask.ts  graphTaskWorker.ts  main.ts  mainMenu.ts  serialize.ts
src/models/: app.ts  graph.ts
src/renderer/: App.css  App.tsx  Bar.tsx  BarIconButton.tsx  ColorButton.tsx  ColorPicker.tsx  ColorWell.tsx  ColorsDialog.tsx  CommandBar.tsx  CustomColorPicker.tsx  ExportImageDialog.tsx  GoToDialog.tsx  GraphBar.tsx  GraphBars.tsx  GraphCommandBar.tsx  GraphLayer.ts  GraphStyleButton.tsx  GraphView.tsx  GridLayer.ts  MyColorPicker.tsx  MySwatchPicker.tsx  PenButton.tsx  PreferencesDialog.tsx  RelationInput.tsx  RenderDialog.tsx  SendableTextField.tsx  SwatchColorPicker.tsx  SymbolsButton.tsx  ThicknessButton.tsx  graphData.ts  gridRenderer.ts  index.html  preload.ts  relationUtils.test.ts  relationUtils.ts  themes.ts
src/renderer/models/: app.ts  graph.ts  store.ts
src/typings/: electron.d.ts  global.d.ts
