[package]
name = "inari-graph"
version = "0.1.0"
authors = ["Masashi Mizuno <mizuno@gsinet.co.jp>"]
edition = "2018"
license = "MIT"
publish = false

[profile.release]
lto = true

[dependencies]
bitflags = "1.2"
clap = { version = "3.0.0-beta.1", default-features = false, features = ["cargo", "std"] }
hexf = "0.1.0"
image = { version = "0.23", default-features = false, features = ["png"] }
inari = { version = "0.5", features = ["gmp"] }
nom = "5.1"
smallvec = "1.4"
static_assertions = "1.1"
