[package]
name = "inari-graph"
version = "0.1.0"
authors = ["Masashi Mizuno <mizuno@gsinet.co.jp>"]
edition = "2018"
license = "MIT"
publish = false

[profile.release]
lto = true

[dependencies]
bitflags = "1.2"
hexf = "0.1"
inari = "0.6"
nom = "6.0"
smallvec = "1.4"
static_assertions = "1.1"

[dependencies.clap]
version = "3.0.0-beta.1"
default-features = false
features = ["cargo", "std"]

[dependencies.image]
version = "0.23"
default-features = false
features = ["png"]
