[package]
name = "inari-graph"
version = "0.1.0"
authors = ["Masashi Mizuno"]
edition = "2018"
repository = "https://github.com/unageek/inari-graph"
license = "MIT"
publish = false

[profile.release]
lto = true

[features]
default = []
arb = []

[dependencies]
bitflags = "1.2"
inari = "0.8"
itertools = "0.10"
nom = "6.0"
smallvec = "1.6"
static_assertions = "1.1"

[dependencies.clap]
version = "3.0.0-beta.2"
default-features = false
features = ["cargo", "std"]

[dependencies.gmp-mpfr-sys]
version = "1.4"
default-features = false
features = ["mpfr"]

[dependencies.image]
version = "0.23"
default-features = false
features = ["png"]

[dependencies.rug]
version = "1.11"
default-features = false
features = ["float"]

[build-dependencies]
bindgen = "*"
