[package]
name = "graphest"
version = "1.1.0"
authors = ["Masashi Mizuno"]
edition = "2021"
repository = "https://github.com/unageek/graphest"
license = "MIT"
publish = false

[features]
default = ["arb"]
arb = ["graphest-arb-sys"]

[dependencies]
bitflags = "1.3"
inari = "0.15"
itertools = "0.10"
nom = "7.1"

[dependencies.clap]
version = "3.1.12"
default-features = false
features = ["std"]

[dependencies.gmp-mpfr-sys]
version = "1.4"
default-features = false
features = ["mpfr"]

[dependencies.graphest-arb-sys]
path = "graphest-arb-sys"
optional = true

[dependencies.graphest-fftw-sys]
path = "graphest-fftw-sys"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png"]

[dependencies.rug]
version = "1.15"
default-features = false
features = ["float", "integer", "rational"]

[dependencies.smallvec]
version = "1.8"
features = ["specialization"]

[dev-dependencies.uuid]
version = "0.8"
default-features = false

[lib]
doctest = false

[[bin]]
name = "compose"
doc = false
test = false

[[bin]]
name = "graph"
doc = false

[[bin]]
name = "join-tiles"
path = "src/bin/join_tiles.rs"
doc = false
test = false
