[package]
name = "graphest"
version = "1.3.3"
authors = ["Masashi Mizuno"]
edition = "2021"
repository = "https://github.com/unageek/graphest"
license = "MIT"
publish = false
default-run = "graph"

[features]
default = ["arb"]
arb = ["graphest-arb-sys"]

[dependencies]
bitflags = "2.3"
inari = "1.0"
itertools = "0.11"
nom = "7.1"

[dependencies.clap]
version = "4.3"
default-features = false
features = ["error-context", "help", "std", "usage"]

[dependencies.gmp-mpfr-sys]
version = "1.4"
default-features = false
features = ["mpfr"]

[dependencies.graphest-arb-sys]
path = "graphest-arb-sys"
optional = true

[dependencies.graphest-fftw-sys]
path = "graphest-fftw-sys"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png"]

[dependencies.rug]
version = "1.18"
default-features = false
features = ["float", "integer", "rational"]

[dependencies.smallvec]
version = "1.10"
features = ["specialization"]

[dev-dependencies.uuid]
version = "1.2"
default-features = false

[lib]
doctest = false

[[bin]]
name = "compose"
doc = false
test = false

[[bin]]
name = "concatenate"
doc = false
test = false

[[bin]]
name = "graph"
doc = false
