[package]
name = "graphest-flint-sys"
version = "0.1.0"
authors = ["Masashi Mizuno"]
edition = "2021"
repository = "https://github.com/unageek/graphest"
license = "MIT"
publish = false

[dependencies.gmp-mpfr-sys]
version = "1.6"
default-features = false
features = ["mpfr"]

[build-dependencies]
bindgen = "*"

[lib]
doctest = false
test = false
